--- a/editor/index.html
+++ b/editor/index.html
@@ -134,8 +134,7 @@
 						<div
 							id="scene-controls"
 							class="accordion-collapse collapse"
-							data-bs-parent="#scene-controls-panel"
-							style="max-height: 50vh; overflow-y: scroll">
+							data-bs-parent="#scene-controls-panel">
 							<div class="accordion-body d-flex flex-column">
 								<label for="light_intensity" class="form-label">Intensità luce ambiente</label>
 								<input
@@ -155,7 +154,7 @@
 										<i class="fa-solid fa-floppy-disk"></i> Salva modifiche
 									</button>
 								</div>
-								<div class="mt-3 p-3 d-grid gap-3" style="opacity: 0.5">
+								<div class="px-3 d-grid gap-3" style="opacity: 0.5">
 									<button id="removeFromScene" type="button" class="btn btn-light btn-sm" disabled>
 										<i class="fa-solid fa-trash-can"></i> Rimuovi da scena
 									</button>
