--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 						<div
 							id="scene-controls"
 							class="accordion-collapse collapse"
-							data-bs-parent="#scene-controls-panel" 
-							style="max-height: 50vh; overflow-y: scroll;">
+							data-bs-parent="#scene-controls-panel">
 							<div class="accordion-body d-flex flex-column">
 								<label for="light_intensity" class="form-label">Intensità luce ambiente</label>
 								<input
